fix: jumping search bar for mobile

--- a/darkmap/front/static_front/galaxy.css
+++ b/darkmap/front/static_front/galaxy.css
@@ -76,7 +76,6 @@ search-bar-counterweight- a {
     color: rgba(255, 255, 255, 0.4);
 }
 
-search-bar-,
 .search-input,
 .search-wrap,
 .search-box {
